--- a/assets/jade/views/header.jade
+++ b/assets/jade/views/header.jade
@@ -33,12 +33,12 @@ header
 							li.active
 								a(href="index.html") HOME
 							li
-								a(href="#") CONTACT US
+								a(href="contactus.html") CONTACT US
 					.col-md-2.text-center
 						h4 
 							span.fa.fa-shopping-cart
 							|My Cart
 						h6 2 item(s) - $244.00
-			
-	
+				
+		
 		
