--- a/assets/jade/views/publicidad.jade
+++ b/assets/jade/views/publicidad.jade
@@ -2,4 +2,6 @@ section.publicidad.text-center
 	.container
 		.row
 			.col-md-5
+				+addimg("banner1.jpg")
 			.col-md-7
+				+addimg("banner2.jpg")
