--- a/assets/sass/helpers/_variables.scss
+++ b/assets/sass/helpers/_variables.scss
@@ -8,8 +8,8 @@ $lato:'Lato', sans-serif;
 $bgpart1:#EEEEEE;
 $textpart1:#888888;
 $borderpart1:#E2E2E2;
-$bg1:#E48080;
-$bg2:rgba(#333333,0.9);
+$bg1:#E48080;//rojo 
+$bg2:#444444;//negro
 $colorbd1:#E8E8E9;
 $colortext1:#E8E8E9;
 
