--- a/assets/jade/views/clientes.jade
+++ b/assets/jade/views/clientes.jade
@@ -1,15 +1,16 @@
 section.clientes.text-center
 	.container
 		.row
-			.col-md-2
+			.col-xs-2
 				+addimg('client1.jpg')
-			.col-md-2
+			.col-xs-2
 				+addimg('client2.jpg')
-			.col-md-2
+			.col-xs-2
 				+addimg('client3.jpg')
-			.col-md-2
+			.col-xs-2
 				+addimg('client4.jpg')
-			.col-md-2
+			.col-xs-2
 				+addimg('client5.jpg')
-			.col-md-2
+			.col-xs-2
 				+addimg('client6.jpg')
+		
